remove global_storage/original_images/ from .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -124,5 +124,7 @@ outputs/
 *.pth
 *.sh
 generated_images/
-global_storage/
+global_storage/aggregated_images/
+global_storage/images_from_nodes/
+global_storage/register/
 node_storage/
